Add energy data support